http2/envoy.yaml
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address: { address: 0.0.0.0, port_value: 8080 }
      filter_chains:
        transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
                "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
                common_tls_context:
                    tls_certificates:
                        - certificate_chain: {filename: "/etc/certs/cert.pem"}
                          private_key: {filename: "/etc/certs/key.pem"}
                    validation_context:
                        trusted_ca: {filename: "/etc/certs/cert.pem"}
        filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: auto
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: backend
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/" }
                          route:
                            cluster: nginx 
                            timeout: 0s
                            max_stream_duration:
                              grpc_timeout_header_max: 0s
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                        "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: nginx
      connect_timeout: 0.25s
      type: strict_dns
      lb_policy: round_robin
      http2_protocol_options: {}
      load_assignment:
        cluster_name: nginx
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: nginx
                      port_value: 443
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
            "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
            common_tls_context:
                tls_certificates:
                    - certificate_chain: {filename: "/etc/certs/cert.pem"}
                      private_key: {filename: "/etc/certs/key.pem"}
                validation_context:
                    trusted_ca: {filename: "/etc/certs/cert.pem"}
